modify readme file